log/build_2023-11-07_12-10-02/robu/stderr.log
  File "/home/robu/work/robu_jamben19_ws/install/robu/lib/python3.10/site-packages/robu/ex10_wallfollower.py", line 76
    "rd: %.2f m", % self.rear_dist,
                  ^
SyntaxError: invalid syntax

